style.css
/* Thin */
@font-face {
	font-family: "Fira Sans";
	font-style: normal;
	font-weight: 100;
	src: url("Fira_Sans/FiraSans-Thin.ttf") format("truetype");
}

@font-face {
	font-family: "Fira Sans";
	font-style: italic;
	font-weight: 100;
	src: url("Fira_Sans/FiraSans-ThinItalic.ttf") format("truetype");
}

/* Extra Light */
@font-face {
	font-family: "Fira Sans";
	font-style: normal;
	font-weight: 200;
	src: url("Fira_Sans/FiraSans-ExtraLight.ttf") format("truetype");
}

@font-face {
	font-family: "Fira Sans";
	font-style: italic;
	font-weight: 200;
	src: url("Fira_Sans/FiraSans-ExtraLightItalic.ttf") format("truetype");
}

/* Light */
@font-face {
	font-family: "Fira Sans";
	font-style: normal;
	font-weight: 300;
	src: url("Fira_Sans/FiraSans-Light.ttf") format("truetype");
}

@font-face {
	font-family: "Fira Sans";
	font-style: italic;
	font-weight: 300;
	src: url("Fira_Sans/FiraSans-LightItalic.ttf") format("truetype");
}

/* Regular */
@font-face {
	font-family: "Fira Sans";
	font-style: normal;
	font-weight: 400;
	src: url("Fira_Sans/FiraSans-Regular.ttf") format("truetype");
}

@font-face {
	font-family: "Fira Sans";
	font-style: italic;
	font-weight: 400;
	src: url("Fira_Sans/FiraSans-Italic.ttf") format("truetype");
}

/* Medium */
@font-face {
	font-family: "Fira Sans";
	font-style: normal;
	font-weight: 500;
	src: url("Fira_Sans/FiraSans-Medium.ttf") format("truetype");
}

@font-face {
	font-family: "Fira Sans";
	font-style: italic;
	font-weight: 500;
	src: url("Fira_Sans/FiraSans-MediumItalic.ttf") format("truetype");
}

/* Semi-bold */
@font-face {
	font-family: "Fira Sans";
	font-style: normal;
	font-weight: 600;
	src: url("Fira_Sans/FiraSans-SemiBold.ttf") format("truetype");
}

@font-face {
	font-family: "Fira Sans";
	font-style: italic;
	font-weight: 600;
	src: url("Fira_Sans/FiraSans-SemiBoldItalic.ttf") format("truetype");
}

/* Bold */
@font-face {
	font-family: "Fira Sans";
	font-style: normal;
	font-weight: 700;
	src: url("Fira_Sans/FiraSans-Bold.ttf") format("truetype");
}

@font-face {
	font-family: "Fira Sans";
	font-style: italic;
	font-weight: 700;
	src: url("Fira_Sans/FiraSans-BoldItalic.ttf") format("truetype");
}

/* Extra Bold */
@font-face {
	font-family: "Fira Sans";
	font-style: normal;
	font-weight: 800;
	src: url("Fira_Sans/FiraSans-ExtraBold.ttf") format("truetype");
}

@font-face {
	font-family: "Fira Sans";
	font-style: italic;
	font-weight: 800;
	src: url("Fira_Sans/FiraSans-ExtraBoldItalic.ttf") format("truetype");
}

/* Black */
@font-face {
	font-family: "Fira Sans";
	font-style: normal;
	font-weight: 900;
	src: url("Fira_Sans/FiraSans-Black.ttf") format("truetype");
}

@font-face {
	font-family: "Fira Sans";
	font-style: italic;
	font-weight: 900;
	src: url("Fira_Sans/FiraSans-BlackItalic.ttf") format("truetype");
}

body {
	font-family: "Fira Sans", sans-serif;
	height: 100dvh;
	display: flex;
	align-items: center;
	justify-content: center;
}

table {
	border-collapse: collapse;
}

th.corner-cell {
	font-weight: 350;
	text-align: center;
	vertical-align: top;
	font-size: 10px;
}

th[data-type] {
	font-weight: 450;
	color: white;
}

/* Type Color Variables */
:root {
	--type-normal-color: #a8a77a;
	--type-fire-color: #ee3030;
	--type-water-color: #6390f0;
	--type-electric-color: #f7d02c;
	--type-grass-color: #7ac74c;
	--type-ice-color: #96d9d6;
	--type-fighting-color: #c22e28;
	--type-poison-color: #a33ea1;
	--type-ground-color: #e2bf65;
	--type-flying-color: #a98ff3;
	--type-psychic-color: #f95587;
	--type-bug-color: #a6b91a;
	--type-rock-color: #b6a136;
	--type-ghost-color: #735797;
	--type-dragon-color: #6f35fc;
	--type-dark-color: #705746;
	--type-steel-color: #b7b7ce;
	--type-fairy-color: #d685ad;

	--super-effective: #4caf50;
	--not-effective: #f44336;
	--immune: #212121;
}

/* Individual Color Mapping */
th[data-type="Normal"] {
	background-color: var(--type-normal-color);
}
th[data-type="Fire"] {
	background-color: var(--type-fire-color);
}
th[data-type="Water"] {
	background-color: var(--type-water-color);
}
th[data-type="Electric"] {
	background-color: var(--type-electric-color);
}
th[data-type="Grass"] {
	background-color: var(--type-grass-color);
}
th[data-type="Ice"] {
	background-color: var(--type-ice-color);
}
th[data-type="Fighting"] {
	background-color: var(--type-fighting-color);
}
th[data-type="Poison"] {
	background-color: var(--type-poison-color);
}
th[data-type="Ground"] {
	background-color: var(--type-ground-color);
}
th[data-type="Flying"] {
	background-color: var(--type-flying-color);
}
th[data-type="Psychic"] {
	background-color: var(--type-psychic-color);
}
th[data-type="Bug"] {
	background-color: var(--type-bug-color);
}
th[data-type="Rock"] {
	background-color: var(--type-rock-color);
}
th[data-type="Ghost"] {
	background-color: var(--type-ghost-color);
}
th[data-type="Dragon"] {
	background-color: var(--type-dragon-color);
}
th[data-type="Dark"] {
	background-color: var(--type-dark-color);
}
th[data-type="Steel"] {
	background-color: var(--type-steel-color);
}
th[data-type="Fairy"] {
	background-color: var(--type-fairy-color);
}

td[data-value="2"] {
	background-color: var(--super-effective);
	color: rgb(255, 221, 87);
}
td[data-value="0.5"] {
	background-color: var(--not-effective);
	color: rgb(255, 221, 87);
}
td[data-value="0"] {
	background-color: var(--immune);
	color: rgb(255, 221, 87);
}

th,
td {
	text-align: center;
	padding: 0.5em;
	margin: 0;
}

td {
	border: 1px solid lightgray;
}

